@@ -16,6 +16,7 @@
 10. Fix getting song details from Cantata stream URLs.
 11. MPRIS interface: fix if condition for CanSeek status update.
 12. MPRIS interface: fix CanPlay/CanPause status update.
+13. MPRIS interface: fix LoopStatus getter and setter.
 
 2.4.1
 -----
